Fixed MaterialData and Owner Bugs