@@ -6,7 +6,6 @@ import com.buam.ultimatesigns.config.Aliases;
 import com.buam.ultimatesigns.config.Config;
 import com.buam.ultimatesigns.lang.exceptions.InvalidArgumentsException;
 import com.buam.ultimatesigns.lang.variables.*;
-import com.buam.ultimatesigns.lang.types.Boolean;
 import com.buam.ultimatesigns.lang.types.Number;
 import com.buam.ultimatesigns.lang.types.Text;
 import com.buam.ultimatesigns.variables.Variable;
@@ -14,25 +13,26 @@ import com.buam.ultimatesigns.variables.VariableType;
 import com.google.common.collect.Sets;
 import org.bukkit.entity.Player;
 
+import java.lang.reflect.InvocationTargetException;
 import java.util.HashSet;
 import java.util.Set;
 
+@SuppressWarnings("unchecked")
 public class TypeManager {
 
-    private static HashSet<Class<? extends Number>> numberTypes = Sets.newHashSet(PlayersOnline.class, SignPlayerLastUsed.class, SignPlayerUses.class, PlayerLevel.class);
-    private static HashSet<Class<? extends Text>> textTypes = Sets.newHashSet(PlayerName.class, PlayerDisplayName.class, PlayerUUID.class, PlayerWorldName.class);
-    private static HashSet<Class<? extends Boolean>> booleanTypes = Sets.newHashSet();
-    private static HashSet<Class<? extends Number>> requiresVault = Sets.newHashSet(PlayerBalance.class);
+    private static final HashSet<Class<? extends Number>> numberTypes = Sets.newHashSet(PlayersOnline.class, SignPlayerLastUsed.class, SignPlayerUses.class, PlayerLevel.class);
+    private static final HashSet<Class<? extends Text>> textTypes = Sets.newHashSet(PlayerName.class, PlayerDisplayName.class, PlayerUUID.class, PlayerWorldName.class);
+    private static final HashSet<Class<? extends Number>> requiresVault = Sets.newHashSet(PlayerBalance.class);
 
-    public static boolean isNumber(String s) throws IllegalAccessException, InstantiationException {
-        for(Class t : numberTypes) {
-            if(((Number) t.newInstance()).isOfType(s)) {
+    public static boolean isNumber(String s) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        for(Class<?> t : numberTypes) {
+            if(((Number) t.getDeclaredConstructor().newInstance()).isOfType(s)) {
                 return true;
             }
         }
         if(UltimateSigns.economy != null) {
-            for(Class t : requiresVault) {
-                if(((Number) t.newInstance()).isOfType(s)) {
+            for(Class<?> t : requiresVault) {
+                if(((Number) t.getDeclaredConstructor().newInstance()).isOfType(s)) {
                     return true;
                 }
             }
@@ -49,23 +49,23 @@ public class TypeManager {
     public static boolean isUnique(String s, Set<Variable> other) {
         s = "[" + s +  "]";
         try {
-            for (Class t : textTypes) {
-                Text instance = (Text) t.newInstance();
+            for (Class<?> t : textTypes) {
+                Text instance = (Text) t.getDeclaredConstructor().newInstance();
                 if (instance.a().equals(s)) {
                     return false;
                 }
             }
 
-            for (Class t : numberTypes) {
-                Number instance = (Number) t.newInstance();
+            for (Class<?> t : numberTypes) {
+                Number instance = (Number) t.getDeclaredConstructor().newInstance();
                 if (instance.a().equals(s)) {
                     return false;
                 }
             }
 
             if (UltimateSigns.economy != null) {
-                for (Class t : requiresVault) {
-                    Number instance = (Number) t.newInstance();
+                for (Class<?> t : requiresVault) {
+                    Number instance = (Number) t.getDeclaredConstructor().newInstance();
                     if (instance.a().equals(s)) {
                         return false;
                     }
@@ -84,9 +84,9 @@ public class TypeManager {
         return true;
     }
 
-    public static boolean isText(String s) throws IllegalAccessException, InstantiationException {
-        for(Class t : textTypes) {
-            if(((Text) t.newInstance()).isOfType(s)) {
+    public static boolean isText(String s) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        for(Class<?> t : textTypes) {
+            if(((Text) t.getDeclaredConstructor().newInstance()).isOfType(s)) {
                 return true;
             }
         }
@@ -98,9 +98,9 @@ public class TypeManager {
         return false;
     }
 
-    public static int getNumber(String s, Player p, USign sign) throws IllegalAccessException, InstantiationException {
-        for(Class t : numberTypes) {
-            Number n = (Number) t.newInstance();
+    public static int getNumber(String s, Player p, USign sign) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        for(Class<?> t : numberTypes) {
+            Number n = (Number) t.getDeclaredConstructor().newInstance();
             if(n.isOfType(s)) {
                 return n.get(p, sign);
             }
@@ -114,9 +114,9 @@ public class TypeManager {
         return 0;
     }
 
-    public static String getText(String s, Player p, USign sign) throws IllegalAccessException, InstantiationException {
-        for(Class c : textTypes) {
-            Text t = (Text) c.newInstance();
+    public static String getText(String s, Player p) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        for(Class<?> c : textTypes) {
+            Text t = (Text) c.getDeclaredConstructor().newInstance();
             if(t.isOfType(s)) {
                 return t.get(p);
             }
@@ -129,29 +129,29 @@ public class TypeManager {
         return "";
     }
 
-    public static boolean getIf(String cmd, Player p, USign s) throws InvalidArgumentsException, IllegalAccessException, InstantiationException {
+    public static boolean getIf(String cmd, Player p, USign s) throws InvalidArgumentsException, IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         return new IfNumberStatement().get(cmd, p, s);
     }
 
-    public static String translate(String s, Player p, USign sign) throws IllegalAccessException, InstantiationException {
-        for(Class t : numberTypes) {
-            Number n = (Number) t.newInstance();
+    public static String translate(String s, Player p, USign sign) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
+        for(Class<?> t : numberTypes) {
+            Number n = (Number) t.getDeclaredConstructor().newInstance();
             s = s.replace(n.a(), Integer.toString(n.get(p, sign)));
             for(String alias : Aliases.i.getAliases(n.a())) {
                 s = s.replace("[" + alias + "]", Integer.toString(n.get(p, sign)));
             }
         }
         if(UltimateSigns.economy != null) {
-            for(Class t : requiresVault) {
-                Number n = (Number) t.newInstance();
+            for(Class<?> t : requiresVault) {
+                Number n = (Number) t.getDeclaredConstructor().newInstance();
                 s = s.replace(n.a(), Integer.toString(n.get(p, sign)));
                 for(String alias : Aliases.i.getAliases(n.a())) {
                     s = s.replace("[" + alias + "]", Integer.toString(n.get(p, sign)));
                 }
             }
         }
-        for(Class t : textTypes) {
-            Text n = (Text) t.newInstance();
+        for(Class<?> t : textTypes) {
+            Text n = (Text) t.getDeclaredConstructor().newInstance();
             s = s.replace(n.a(), n.get(p, sign));
             for(String alias : Aliases.i.getAliases(n.a())) {
                 s = s.replace("[" + alias + "]", n.get(p, sign));
@@ -166,11 +166,11 @@ public class TypeManager {
         return s;
     }
 
-    public static String replaceNumbers(String in) throws IllegalAccessException, InstantiationException {
+    public static String replaceNumbers(String in) throws IllegalAccessException, InstantiationException, NoSuchMethodException, InvocationTargetException {
         char[] chars = in.toCharArray();
 
-        for(Class t : numberTypes) {
-            String a = ((Number) t.newInstance()).a();
+        for(Class<?> t : numberTypes) {
+            String a = ((Number) t.getDeclaredConstructor().newInstance()).a();
 
             if(in.contains(a)) {
                 int start = in.indexOf(a);
